--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -16,13 +16,67 @@
                 <p>{{user_email}}</p>
             </div>
             <div>
-                <a href="#" class="text-xl text-white bg-gradient-to-r from-violet-800 to-violet-500 px-3 py-1 rounded flex items-center justify-center">
-                    <ion-icon name="pencil"></ion-icon>
-                </a>
+                <button class="text-md text-white bg-gradient-to-r from-violet-800 to-violet-500 px-3 py-1 rounded flex items-center justify-center" type="button" data-modal-toggle="defaultModal">
+                    <span class="pr-1">Edit</span> <ion-icon name="pencil"></ion-icon>
+                </button>
+                
             </div>
         </div>
     </div>
 </section>
+
+
+
+<!-- Edit profile modal -->
+<div id="defaultModal" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 p-4 w-full md:inset-0 h-modal md:h-full">
+    <div class="relative w-full max-w-2xl h-full md:h-auto">
+        <!-- Modal content -->
+        <div class="relative bg-white rounded-lg shadow">
+            <!-- Modal header -->
+            <div class="flex justify-between items-center p-4 rounded-t md:items-start ">
+                <h3 class="text-xl font-semibold text-violet-800">
+                    Edit name or email
+                </h3>
+                <button type="button" class="text-violet-800 text-xl hover:bg-violet-800 hover:text-white rounded-full p-1.5 ml-auto inline-flex items-center" data-modal-toggle="defaultModal">
+                    <ion-icon name="close"></ion-icon>
+                    <span class="sr-only">Close modal</span>
+                </button>
+            </div>
+            <!-- Modal body -->
+            <div class="px-6 pb-6 space-y-6">
+                <form action="#" method="POST" class="flex flex-col text-center md:text-left">
+                
+                    <div class="flex flex-col my-2">
+                        <label for="name">
+                            Name
+                        </label>
+                        <input type="text" id="name" name="name" class="rounded border border-gray-300 focus:border-violet-800" value="{{ user_name }}">
+                    </div>
+
+                    <div class="flex flex-col my-2">
+                        <label for="email">
+                            Email
+                        </label>
+                        <input type="email" id="email" name="email" class="rounded border border-gray-300 focus:border-violet-800" value="{{ user_email }}">
+                    </div>
+                    
+                    <button class="bg-violet-800 rounded-full text-white py-2 mt-4 mb-2">
+                        Save
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
 
 {{!-- My testimonies --}}
 <section class="py-10">
@@ -31,7 +85,7 @@
             My testimonies
         </h1>
 
-        
+        <a href="#"></a>
         
     </div>
 </section>
