--- a/views/layouts/main_layout.hbs
+++ b/views/layouts/main_layout.hbs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.4/dist/flowbite.min.css" />
+
     <link rel="stylesheet" href="./css/output.css">
     <title>SHARE</title>
 </head>
@@ -17,6 +19,9 @@
     {{{body}}}
 
     {{>_footer}}
+
+    <script src="https://unpkg.com/flowbite@1.5.4/dist/flowbite.js"></script>
+
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
