--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -16,7 +16,7 @@
                 <p>{{user_email}}</p>
             </div>
             <div>
-                <button class="text-md text-white bg-gradient-to-r from-violet-800 to-violet-500 px-3 py-1 rounded flex items-center justify-center" type="button" data-modal-toggle="defaultModal">
+                <button class="text-sm text-white bg-gradient-to-r from-violet-800 to-violet-500 px-3 py-1 rounded flex items-center justify-center" type="button" data-modal-toggle="defaultModal">
                     <span class="pr-1">Edit</span> <ion-icon name="pencil"></ion-icon>
                 </button>
                 
@@ -24,7 +24,6 @@
         </div>
     </div>
 </section>
-
 
 
 <!-- Edit profile modal -->
@@ -44,7 +43,7 @@
             </div>
             <!-- Modal body -->
             <div class="px-6 pb-6 space-y-6">
-                <form action="#" method="POST" class="flex flex-col text-center md:text-left">
+                <form action="/profile/edit/{{user._id}}?_method=PUT" method="POST" class="flex flex-col text-center md:text-left">
                 
                     <div class="flex flex-col my-2">
                         <label for="name">
