--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -43,7 +43,7 @@
             </div>
             <!-- Modal body -->
             <div class="px-6 pb-6 space-y-6">
-                <form action="/profile/edit/{{user._id}}?_method=PUT" method="POST" class="flex flex-col text-center md:text-left">
+                <form action="/profile/edit/{{user_id}}?_method=PUT" method="POST" class="flex flex-col text-center md:text-left">
                 
                     <div class="flex flex-col my-2">
                         <label for="name">
